[package]
name = "render"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/penpot/penpot"
license-file = "../LICENSE"
description = "Wasm-based canvas renderer for Penpot"

[features]
default = []
profile = ["profile-macros", "profile-raf"]
profile-macros = []
profile-raf = []

[[bin]]
name = "render_wasm"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
bezier-rs = "0.4.0"
gl = "0.14.0"
glam = "0.24.2"
indexmap = "2.7.1"
skia-safe = { version = "0.87.0", default-features = false, features = [
  "gl",
  "svg",
  "textlayout",
  "binary-cache",
  "webp"
] }
uuid = { version = "1.11.0", features = ["v4", "js"] }

[profile.release]
opt-level = "s"
